kube/wireguard.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wireguard

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy
  namespace: wireguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wg-easy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wg-easy
    spec:
      containers:
        - name: wg-easy
          image: ghcr.io/wg-easy/wg-easy:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 51820
              name: wg
              protocol: UDP
            - containerPort: 51821
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          volumeMounts:
            - mountPath: /etc/wireguard
              name: config
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wg-easy-storage
---

apiVersion: v1
kind: Service
metadata:
  name: wg-easy-wg
  namespace: wireguard
spec:
  ports:
    - name: wg
      port: 51820
      protocol: UDP
      targetPort: wg
  selector:
    app.kubernetes.io/name: wg-easy
  type: LoadBalancer
